@@ -60,6 +60,9 @@
 		<delete dir="war/WEB-INF/classes" />
 		<delete dir="war/dhcalc" />
 		<delete dir="war/WEB-INF/deploy" />
+		<delete>
+			<fileset dir="src" includes="**/*.class" />
+		</delete>
 	</target>
 	<target depends="clean" name="cleanall">
 		<ant antfile="build-ant.xml" dir="${dawg6-common.location}"
