@@ -28,7 +28,7 @@ public class Version  implements Serializable {
 
 	public static final String PREFIX = "Version:";
 	
-	public static String VERSION = "2.2-150512.01";
+	public static String VERSION = "2.2-150512.02";
 	public static String VERSION_DATE = "05/12/2015";
 	
 	public String version;
